// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`group-panel Renders \`group-panel\` with custom props 1`] = `
<div
  aria-expanded="false"
  class="v-expansion-panel secondary group-panel group-panel--editing"
  hide-actions="true"
>
  <button
    class="v-expansion-panel-header pa-0 pr-6"
    type="button"
  >
    <div
      class="px-6 py-4 group-panel__title"
    >
        Custom group title
    </div>
    <div
      class="group-panel__actions"
    />
  </button>
  <button
    class="v-btn v-btn--disabled v-btn--icon v-btn--round theme--light v-size--small"
    disabled="disabled"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
        style="font-size: 16px;"
      >
        edit
      </i>
    </span>
  </button>
</div>
`;

exports[`group-panel Renders \`group-panel\` with required props 1`] = `
<div
  aria-expanded="false"
  class="v-expansion-panel secondary group-panel"
>
  <button
    class="v-expansion-panel-header pa-0 pr-6"
    type="button"
  >
    <div
      class="px-6 py-4 group-panel__title"
    >
        Group title
    </div>
    <div
      class="group-panel__actions"
    />
  </button>
  <button
    class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
    style="display: none;"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
        style="font-size: 16px;"
      >
        edit
      </i>
    </span>
  </button>
</div>
`;
